--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
   /* Bakcground image */
-  background-image: url("./images-blackjack/backofcard.png");
+  background-image: url("./images-blackjack/back3.png");
   background-repeat: repeat;
   background-attachment: scroll;
   background-size: 15%;
